--- a/pom.xml
+++ b/pom.xml
@@ -157,10 +157,14 @@ under the License.
 		</dependency>
 		<dependency>
 			<groupId>org.knowm.xchange</groupId>
-			<artifactId>xchange-stream-bitstamp</artifactId>
+			<artifactId>xchange-stream-binance</artifactId>
 			<version>${xchange.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-binance</artifactId>
+			<version>${xchange.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
@@ -251,7 +255,12 @@ under the License.
 				</dependency>
 				<dependency>
 					<groupId>org.knowm.xchange</groupId>
-					<artifactId>xchange-stream-bitstamp</artifactId>
+					<artifactId>xchange-stream-binance</artifactId>
+					<version>${xchange.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.knowm.xchange</groupId>
+					<artifactId>xchange-binance</artifactId>
 					<version>${xchange.version}</version>
 				</dependency>
 			</dependencies>
